--- a/mod.ini
+++ b/mod.ini
@@ -1,4 +1,4 @@
 Name=The Sonic Debut Experience
 Author=NotSoDevy
-Version=1
-Description=Experience GHZ from Debut!
+Version=1.01
+Description=Provides the Sonic Debut experience in RSDK form.
